apps/k8s/client-api/overlays/stage/cors-middleware.yaml
apiVersion: traefik.io/v1alpha1
kind: Middleware
metadata:
  name: cors
  namespace: client-api
spec:
  headers:
    accessControlAllowOriginListRegex:
      - 'https://\d+\.preview\.codedang\.com'
      - 'http://localhost:5525'
    accessControlAllowMethods:
      - 'GET'
      - 'POST'
      - 'PUT'
      - 'PATCH'
      - 'DELETE'
    accessControlAllowHeaders:
      - 'Content-Type'
      - 'Authorization'
      - 'Email-Auth'
    accessControlExposeHeaders:
      - 'Email-Auth'
    accessControlAllowCredentials: true
