apps/k8s/client-api/overlays/stage/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: client-api-server-ingress
  namespace: client-api
spec:
  ingressClassName: traefik
  tls:
    - hosts:
        - stage.codedang.com
      secretName: client-api-server-tls
  rules:
    - host: stage.codedang.com
      http:
        paths:
          - path: /api/
            pathType: Prefix
            backend:
              service:
                name: client-api-server
                port:
                  number: 4000
